<resources>
    <string name="app_name">AppPeliculas</string>
    <string name="pelicula">Pelicula</string>
    <string name="descripcion">Descripcion</string>
    <string name="nueva_pelicula">Nueva Pelicula</string>
    <string name="poster">Poster</string>
    <string name="anho">Año</string>
    <string name="duracion">Duracion</string>
    <string name="volver">Volver</string>
    <string name="limpiar">Limpiar</string>

    <string name="escribe_tu_e_mail">Escribe tu e-mail</string>
    <string name="contrasena">Contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="acepto_los_terminos">Acepto los términos</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>

    <string name="buscar">Buscar</string>

    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="recordar">Recordar</string>
    <string name="email">Correo electrónico</string>
    <string name="caracteres">Al menos 8 caracteres</string>


</resources>