<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetalleActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDetalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pelicula"
        android:layout_marginTop="32dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivPeliculaElegida"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetalle"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/lDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPeliculaElegida">

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descripcion"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvDuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/duracion"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvAnho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/anho"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lDatos" />

</androidx.constraintlayout.widget.ConstraintLayout>